hmpt: Fix line wrapping

--- a/translations/paroleise/unfinished/hakurei-miko-ga-tooru/styles.css
+++ b/translations/paroleise/unfinished/hakurei-miko-ga-tooru/styles.css
@@ -73,8 +73,8 @@ h1 {
 
 table {
     border-spacing: 10px;
-    width: 90%;
-    margin-left: 7%;
+    width: 95%;
+    margin-left: 5%;
     margin-right: 83%;
     /* font-size: 18px; */
     /* border: 2px solid red; */
